# awesome-inc

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
src/awesome_inc/api/: __init__.py  constants.py  enums.py  main.py  models.py  requests.py  schemas.py
src/awesome_inc/api/core/: authentication.py  config.py  database.py
src/awesome_inc/warehouse/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
src/awesome_inc/warehouse/models/: sources.yml
src/awesome_inc/warehouse/models/marts/: models.yml
src/awesome_inc/warehouse/models/marts/dim_tables/: dim_country.sql  dim_customer.sql  dim_product.sql  dim_product_category.sql
src/awesome_inc/warehouse/models/marts/fct_tables/: fct_installation.sql  monthly_installations.sql  product_category_revenue.sql  region_revenue.sql
src/awesome_inc/warehouse/models/staging/: models.yml  stg_dim_country.sql  stg_dim_customer.sql  stg_dim_product.sql  stg_dim_product_category.sql  stg_fct_installation.sql
src/awesome_inc/warehouse/snapshots/: country_snapshot.sql  customer_snapshot.sql  product_category_snapshot.sql  product_snapshot.sql
tests/: test_authentication.py  test_database.py  test_main.py  test_requests.py
